# neural-networks-hw1

./: .gitignore  CMakeLists.txt  README.md
include/: KNearestNeighbors.hpp  MultiLayerPerceptron.hpp  NdPoint.hpp  NdPointSet.hpp  NearestCentroidClassifier.hpp  NearestNeighborClassifiers.hpp  NeuronLayer.hpp  basicStructs.hpp  cifarHandlers.hpp
include/CommonLib/: basicFuncs.hpp  basicStructs.hpp  cifarHandlers.hpp
include/CudaMLP/: MultiLayerPerceptron.hpp  NeuronLayer.hpp
include/MLP/: ActivationFunctions.hpp  Modifiers.hpp  MultiLayerPerceptron.hpp  NeuronLayer.hpp  NewLayer.hpp  NewMLP.hpp
include/NearestNeighbors/: KNearestNeighbors.hpp  NearestCentroidClassifier.hpp  NearestNeighborClassifiers.hpp
jobs/: new_test_job.sh  test_job.sh
misc/bash_scripts/: testNN_bash.sh
misc/jobs/: cpu_rate_sweep.sh  test_job.sh
misc/python_scripts/: hw1_plots.py
models/adam/network_19/: epoch_accuracy_log.csv  info.txt
models/adam/network_19/layer_0/: biases.csv
models/adam/network_19/layer_1/: biases.csv
models/adam/network_19/layer_2/: biases.csv  weights.csv
models/adam/network_19/layer_3/: biases.csv  weights.csv
models/adam/network_8/: epoch_accuracy_log.csv
models/adam/network_8/layer_0/: biases.csv
models/adam/network_8/layer_2/: weights.csv
models/adam/network_8/layer_3/: biases.csv
models/batch_sweep/network_10/: epoch_accuracy_log.csv  info.txt
models/batch_sweep/network_10/layer_0/: biases.csv
models/batch_sweep/network_10/layer_1/: biases.csv
models/batch_sweep/network_10/layer_2/: biases.csv  weights.csv
models/batch_sweep/network_10/layer_3/: biases.csv  weights.csv
models/batch_sweep/network_11/: epoch_accuracy_log.csv  info.txt
models/batch_sweep/network_11/layer_0/: biases.csv
models/batch_sweep/network_11/layer_1/: biases.csv
models/batch_sweep/network_11/layer_2/: biases.csv  weights.csv
models/batch_sweep/network_11/layer_3/: biases.csv  weights.csv
models/batch_sweep/network_8/: info.txt
models/batch_sweep/network_8/layer_1/: biases.csv
models/batch_sweep/network_8/layer_2/: biases.csv
models/batch_sweep/network_8/layer_3/: weights.csv
models/batch_sweep/network_9/: epoch_accuracy_log.csv  info.txt
models/batch_sweep/network_9/layer_0/: biases.csv
models/batch_sweep/network_9/layer_1/: biases.csv
models/batch_sweep/network_9/layer_2/: biases.csv  weights.csv
models/batch_sweep/network_9/layer_3/: biases.csv  weights.csv
models/layout_sweep/network_12/: epoch_accuracy_log.csv  info.txt
models/layout_sweep/network_12/layer_0/: biases.csv
models/layout_sweep/network_12/layer_1/: biases.csv
models/layout_sweep/network_12/layer_2/: biases.csv  weights.csv
models/layout_sweep/network_12/layer_3/: biases.csv  weights.csv
models/layout_sweep/network_13/: epoch_accuracy_log.csv  info.txt
models/layout_sweep/network_13/layer_0/: biases.csv
models/layout_sweep/network_13/layer_1/: biases.csv
models/layout_sweep/network_13/layer_2/: biases.csv  weights.csv
models/layout_sweep/network_15/: epoch_accuracy_log.csv  info.txt
models/layout_sweep/network_15/layer_0/: biases.csv
models/layout_sweep/network_15/layer_1/: biases.csv
models/layout_sweep/network_15/layer_2/: biases.csv
models/layout_sweep/network_15/layer_3/: biases.csv
models/layout_sweep/network_15/layer_4/: biases.csv  weights.csv
python_scripts/: create_hw0_data.py
scripts/: main.cpp  randomTest.cpp  testCudaMLP.cpp  testCudaMLP.cu  testMLP.cpp  testNN.cpp  testStoredModel.cpp
src/: KNearestNeighbors.cpp  MultiLayerPerceptron.cpp  NearestCentroidClassifier.cpp  NearestNeighborClassifiers.cpp  NeuronLayer.cpp  activationFunctions.cpp  cifarHandlers.cpp  main.cpp
src/CommonLib/: CMakeLists.txt  LogHandler.cpp  basicFuncs.cpp  cifarHandlers.cpp
src/CudaMLP/: CMakeLists.txt  MultiLayerPerceptron.cu  NeuronLayer.cu
src/MLP/: ActivationFunctions.cpp  Modifiers.cpp  MultiLayerPerceptron.cpp  NeuronLayer.cpp  NewLayer.cpp  NewMLP.cpp
src/NearestNeighbors/: CMakeLists.txt  KNearestNeighbors.cpp  NearestCentroidClassifier.cpp  NearestNeighborClassifiers.cpp
